--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Number Counter</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h1>Counter</h1>
-        <script src="app.js"> </script>
-    </body>
+
+<head>
+    <title>Number Counter</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <h1>Counter</h1>
+    <div class="counter">0</div>
+    <div class="operations">
+        <button class="operation">DECREASE</button>
+        <button class="operation">RESET</button>
+        <button class="operation">INCREASE</button>
+    </div>
+    <script src="app.js"> </script>
+</body>
+
 </html>
