added classes and selected each button in javascript file

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Counter</h1>
     <div class="counter">0</div>
     <div class="operations">
-        <button class="operation">DECREASE</button>
-        <button class="operation">RESET</button>
-        <button class="operation">INCREASE</button>
+        <button class="operation decrease">DECREASE</button>
+        <button class="operation reset">RESET</button>
+        <button class="operation increase">INCREASE</button>
     </div>
     <script src="app.js"> </script>
 </body>
